# shar

src/channels/: bounded.hpp  default.hpp
src/client/: CMakeLists.txt  main.cpp
src/codecs/ffmpeg/: decoder.cpp  encoder.cpp
src/processors/: frame_display.cpp  frame_display.hpp  frame_file_reader.hpp  frame_file_writer.hpp  h264decoder.cpp  h264decoder.hpp  h264encoder.hpp  packet_receiver.cpp  packet_receiver.hpp  packet_sender.hpp  pipeline.hpp  processor.cpp  processor.hpp  screen_capture.hpp
src/server/: CMakeLists.txt
src/utils/: CMakeLists.txt  chain_test.cpp  full_pipeline_test.cpp  play.cpp
